--- a/packages/tldraw/src/translations/main.json
+++ b/packages/tldraw/src/translations/main.json
@@ -23,6 +23,7 @@
   "zoom.to.selection": "Zoom to Selection",
   "zoom.to.fit": "Zoom to Fit",
   "zoom.to": "Zoom to",
+  "preferences.palmRejection.mode": "Palm Rejection Mode",
   "preferences.dark.mode": "Dark Mode",
   "preferences.focus.mode": "Focus Mode",
   "preferences.debug.mode": "Debug Mode",
